--- a/app/views/partials/messages.ejs
+++ b/app/views/partials/messages.ejs
@@ -6,3 +6,17 @@
         </div>
     <% }); %>
 <% } %>
+
+<% if(success_msg != '') { %>
+    <div class="alert alert-success alert-dismissible" role="alert">
+        <span type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></span>
+        <%= success_msg %>
+    </div>
+<% } %>
+
+<% if(error_msg != '') { %>
+    <div class="alert alert-warning alert-dismissible" role="alert">
+        <span type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></span>
+        <%= error_msg %>
+    </div>
+<% } %>
