--- a/app/views/accommodation.ejs
+++ b/app/views/accommodation.ejs
@@ -73,9 +73,9 @@ body, html {
     margin-top: 100px;
 }
 
-#dropdown-adult, #dropdown-children {
+#dropdown_adult, #dropdown_children {
     margin-right: 30px;
-    width: 25%;
+    width: 30%;
 }
 
 #home-navbar {
@@ -156,17 +156,50 @@ body, html {
 									<div class="container-fluid">
 										<div class="row">
 										<div class="col-md-8 col-sm-8 col-xs-8">
-											<form method="post">
+											<form role="form" method="POST" action="/rooms/availability" id="form1">
 												<div class="form-group ">
 													<div class="input-group">
 														<div class="input-group-addon">
 															Check-in
 														</div>
-													<input class="form-control" id="date-checkin" name="date" placeholder="DD/MM/YYYY" type="text"/>
-													<div class="input-group-addon">
-														<span class="glyphicon glyphicon-calendar"></span>
+														<input class="form-control" id="date_checkin" name="date_checkin" placeholder="DD/MM/YYYY" type="text"/>
+														<div class="input-group-addon">
+															<span class="glyphicon glyphicon-calendar"></span>
+														</div>
 													</div>
+													<div class="input-group">
+														<div class="input-group-addon">
+															Check-out
+														</div>
+														<input class="form-control" id="date_checkout" name="date_checkout" placeholder="DD/MM/YYYY" type="text"/>
+														<div class="input-group-addon">
+															<span class="glyphicon glyphicon-calendar"></span>
+														</div>
 													</div>
+													<p class="text-right">
+															<div class="form-group row">
+																	<select class="form-control pull-right" id="dropdown_adult" name="dropdown_adult">
+																			<option disabled>Adults</option>
+																			<option>0</option>
+																			<option>1</option>
+																			<option>2</option>
+																			<option>3</option>
+																			<option>4</option>
+																	</select>
+															</div>
+													</p>
+													<p class="text-right">
+															<div class="form-group row">
+																	<select class="form-control pull-right" id="dropdown_children" name="dropdown_children">
+																			<option disabled>Children</option>
+																			<option>0</option>
+																			<option>1</option>
+																			<option>2</option>
+																			<option>3</option>
+																			<option>4</option>
+																	</select>
+															</div>
+													</p>
 												</div>
 											</form>
 										</div>
@@ -175,60 +208,7 @@ body, html {
 								</div>
             </div>
             <div class="row">
-                <p class="text-center col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                </p>
-                <div class="bootstrap-iso">
-									<div class="container-fluid">
-										<div class="row">
-										<div class="col-md-8 col-sm-8 col-xs-8">
-											<form method="post">
-												<div class="form-group ">
-													<div class="input-group">
-														<div class="input-group-addon">
-															Check-out
-														</div>
-													<input class="form-control" id="date-checkout" name="date" placeholder="DD/MM/YYYY" type="text"/>
-													<div class="input-group-addon">
-														<span class="glyphicon glyphicon-calendar"></span>
-													</div>
-													</div>
-												</div>
-											</form>
-										</div>
-										</div>
-								</div>
-							</div>
-            </div>
-            <div class="row">
-                <p class="text-right">
-                    <div class="form-group row">
-                        <select class="form-control pull-right" id="dropdown-adult">
-                            <option>Adults</option>
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                        </select>
-                    </div>
-                </p>
-            </div>
-            <div class="row">
-                <p class="text-right">
-                    <div class="form-group row">
-                        <select class="form-control pull-right" id="dropdown-children">
-                            <option>Children</option>
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                        </select>
-                    </div>
-                </p>
-            </div>
-            <div class="row">
-                <form role="form" action="/rooms/availability" method="GET">
-                    <button type="submit" class="btn btn-warning btn-md pull-right" id="btn-checkavailability">Check Availability</button>
-                </form>
+							<button type="submit" class="btn btn-warning btn-md pull-right" id="btn-checkavailability" onclick="submitForms()">Check Availability</button>
             </div>
         </div>
 
@@ -244,6 +224,7 @@ body, html {
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
 
+<!-- Datepicker functionality-->
 <script>
     $(document).ready(function(){
         var date_input=$('input[name="date"]'); //our date input has the name "date"
@@ -257,26 +238,33 @@ body, html {
     })
 </script>
 <script>
-		$('#date-checkin').datepicker({
+		$('#date_checkin').datepicker({
 			orientation: "auto",
 			startDate: "+1d",
 			format: 'dd/mm/yyyy'
 		}).on('changeDate', function (selected) {
         var minDate = new Date(selected.date.valueOf());
-        $('#date-checkout').datepicker('setStartDate', minDate);
+        $('#date_checkout').datepicker('setStartDate', minDate);
     });
 </script>
 <script>
-		$('#date-checkout').datepicker({
+		$('#date_checkout').datepicker({
 			orientation: "auto",
 			startDate: "+1d",
 			format: 'dd/mm/yyyy'
 		}).on('changeDate', function (selected) {
 				var maxDate = new Date(selected.date.valueOf());
-				$('#date-checkin').datepicker('setEndDate', maxDate);
+				$('#date_checkin').datepicker('setEndDate', maxDate);
 		});
 </script>
 
+<!-- Submit both forms with one button -->
+<script>
+	submitForms = function(){
+    document.getElementById("form1").submit();
+    document.getElementById("form2").submit();
+	}
+</script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.12.0/d3.min.js"></script>
 <script src="./js/bootstrap.min.js"></script>
