--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -1,191 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
+   <meta charset="UTF-8">
 
-<!-- If IE use the latest rendering engine -->
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <!-- If IE use the latest rendering engine -->
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<!-- Set the page to the width of the device and set the zoon level -->
-<meta name="viewport" content="width = device-width, initial-scale = 1">
-<title>Hotel Management System - Register</title>
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+   <!-- Set the page to the width of the device and set the zoon level -->
+   <meta name="viewport" content="width = device-width, initial-scale = 1">
+   <title>Hotel Management System - Register</title>
+   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-<style>
-body, html {
-  height: 100%;
-}
+   <style>
+      body,
+      html {
+         height: 100%;
+      }
 
-.bg {
-    /* The image used */
-    background-image: url("images/hotel.jpg");
+      .bg {
+         /* The image used */
+         background-image: url("images/hotel.jpg");
 
-    /* Full height */
-    height: 100%;
-    position: absolute;
-    width: 100%;
-    left: 0;
+         /* Full height */
+         height: 100%;
+         position: absolute;
+         width: 100%;
+         left: 0;
 
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+         /* Center and scale the image nicely */
+         background-position: center;
+         background-repeat: no-repeat;
+         background-size: cover;
+      }
 
-.centered-form{
-	margin-top: 150px;
-}
+      .centered-form {
+         margin-top: 150px;
+      }
 
-.centered-form .panel{
-	background: rgba(255, 255, 255, 0.8);
-	box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
-}
+      .centered-form .panel {
+         background: rgba(255, 255, 255, 0.8);
+         box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
+      }
 
-.input-error{
-    position: relative;
-    padding-top: 15px;
-}
+      .input-error {
+         position: relative;
+         padding-top: 15px;
+      }
 
-/* Adds borders for tabs */
-.tab-content {
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    padding: 10px;
-}
+      /* Adds borders for tabs */
+      .tab-content {
+         border-left: 1px solid #ddd;
+         border-right: 1px solid #ddd;
+         border-bottom: 1px solid #ddd;
+         padding: 10px;
+      }
 
-.nav-tabs, .nav-pills {
-    text-align:center;
-    height: 20%;
-    margin-bottom: 0;
-}
+      .nav-tabs,
+      .nav-pills {
+         text-align: center;
+         height: 20%;
+         margin-bottom: 0;
+      }
 
-.nav-tabs > li, .nav-pills > li {
-    float:none;
-    display:inline-block;
-    *display:inline; /* ie7 fix */
-    zoom:1; /* hasLayout ie7 trigger */
+      .nav-tabs>li,
+      .nav-pills>li {
+         float: none;
+         display: inline-block;
+         *display: inline;
+         /* ie7 fix */
+         zoom: 1;
+         /* hasLayout ie7 trigger */
 
-}
+      }
 
-.nav>li>a {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    color:black;
-}
+      .nav>li>a {
+         padding-top: 20px;
+         padding-bottom: 20px;
+         color: black;
+      }
 
-#home-navbar {
-    position: relative;
-    width: 100%;
-    left: 0;
-}
+      #home-navbar {
+         position: relative;
+         width: 100%;
+         left: 0;
+      }
 
-#login-btn {
-    padding-top: 5px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    display:inline-block;
-    *display:inline; /* ie7 fix */
-    zoom:1; /* hasLayout ie7 trigger */
-}
-
-</style>
+      #login-btn {
+         padding-top: 5px;
+         margin-top: 10px;
+         margin-bottom: 10px;
+         display: inline-block;
+         *display: inline;
+         /* ie7 fix */
+         zoom: 1;
+         /* hasLayout ie7 trigger */
+      }
+   </style>
 
 </head>
-<body>
-<div class="container bg">
 
-    <!-- Navigation Bar -->
-    <div class="container-fluid">
-        <div class="row" id="home-navbar">
-        
+<body>
+   <div class="container bg">
+
+      <!-- Navigation Bar -->
+      <div class="container-fluid">
+         <div class="row" id="home-navbar">
+
             <!-- Use nav-pills, nav-tabs. To center tabs add nav-justified to the class for ul -->
             <ul class="nav nav-pills">
-                
-                <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                    <li class="text-center"><a href="/">HOME</a></li>
-                </div>
 
-                <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-4">
-                    <li class="text-center"><a href="../rooms/accommodation">ACCOMMODATION</a></li>
-                </div>
+               <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                  <li class="text-center"><a href="/">HOME</a></li>
+               </div>
 
-                <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                    <li class="text-center"><a href="#booking">BOOKING</a></li>
-                </div>
+               <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-4">
+                  <li class="text-center"><a href="../rooms/accommodation">ACCOMMODATION</a></li>
+               </div>
 
-                <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-2">
-                    <li class="text-center"><a href="login"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a></li>
-                </div>
+               <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                  <li class="text-center"><a href="#booking">BOOKING</a></li>
+               </div>
+
+               <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-2">
+                  <li class="text-center"><a href="login"><button type="submit" class="btn btn-danger" role="button"
+                           id="login-btn">LOGIN</button></a></li>
+               </div>
             </ul>
-            
-        </div> <!-- home-navbar -->
-    </div> <!-- container-fluid // END OF TOP NAV BAR // -->
 
-    <div class="container">
-        <div class="row centered-form">
+         </div> <!-- home-navbar -->
+      </div> <!-- container-fluid // END OF TOP NAV BAR // -->
+
+      <div class="container">
+         <div class="row centered-form">
             <div class="col-lg-4 col-md-4 col-sm-8 col-xs-12 col-sm-offset-2 col-md-offset-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Sign up <small>book your room now!</small></h3>
+               <div class="panel panel-default">
+                  <div class="panel-heading">
+                     <h3 class="panel-title">Sign up <small>book your room now!</small></h3>
+                  </div>
+                  <div class="panel-body">
+                     <% include ./partials/messages %>
+                     <form role="form" method="POST" action="/users/register">
+                        <div class="row">
+                           <div class="col-xs-12 col-sm-12 col-md-12">
+                              <div class="form-group">
+                                 <input type="text" name="username" id="username" class="form-control input-sm"
+                                    placeholder="Username"
+                                    value="<%= typeof username != 'undefined' ? username : '' %>">
+                              </div>
+                              <span id="username_id" class="input-error text-danger font-weight-bold"></span>
+                           </div>
                         </div>
-                        <div class="panel-body"> 
-                        <% include ./partials/messages %>
-                        <form role="form" method="POST" action="/users/register">
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-12 col-md-12">
-                                    <div class="form-group">
-                                        <input type="text" name="username" id="username" class="form-control input-sm" placeholder="Username" value="<%= typeof username != 'undefined' ? username : '' %>">
-                                    </div>
-                                    <span id="username_id" class="input-error text-danger font-weight-bold"></span>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" name="first_name" id="first_name" class="form-control input-sm" placeholder="First Name" value="<%= typeof first_name != 'undefined' ? first_name : '' %>">
-                                    </div>
-                                    <span id="first_name_id" class="input-error text-danger font-weight-bold"></span>
-                                </div>
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" name="last_name" id="last_name" class="form-control input-sm" placeholder="Last Name" value="<%= typeof last_name != 'undefined' ? last_name : '' %>">
-                                    </div>
-                                    <span id="last_name_id" class="input-error text-danger font-weight-bold"></span>
-                                </div>
-                            </div>
+                        <div class="row">
+                           <div class="col-xs-6 col-sm-6 col-md-6">
+                              <div class="form-group">
+                                 <input type="text" name="first_name" id="first_name" class="form-control input-sm"
+                                    placeholder="First Name"
+                                    value="<%= typeof first_name != 'undefined' ? first_name : '' %>">
+                              </div>
+                              <span id="first_name_id" class="input-error text-danger font-weight-bold"></span>
+                           </div>
+                           <div class="col-xs-6 col-sm-6 col-md-6">
+                              <div class="form-group">
+                                 <input type="text" name="last_name" id="last_name" class="form-control input-sm"
+                                    placeholder="Last Name"
+                                    value="<%= typeof last_name != 'undefined' ? last_name : '' %>">
+                              </div>
+                              <span id="last_name_id" class="input-error text-danger font-weight-bold"></span>
+                           </div>
+                        </div>
 
-                            <div class="form-group">
-                                <input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address" value="<%= typeof email != 'undefined' ? email : '' %>">
-                                <span id="email_id" class="input-error text-danger font-weight-bold"></span>
-                            </div>
+                        <div class="form-group">
+                           <input type="email" name="email" id="email" class="form-control input-sm"
+                              placeholder="Email Address" value="<%= typeof email != 'undefined' ? email : '' %>">
+                           <span id="email_id" class="input-error text-danger font-weight-bold"></span>
+                        </div>
 
-                            <div class="row">
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <div class="form-group">
-                                        <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password" value="<%= typeof password != 'undefined' ? password : '' %>">
-                                    </div>
-                                    <span id="password_id" class="input-error text-danger font-weight-bold"></span>
-                                </div>
-                                <div class="col-xs-6 col-sm-6 col-md-6">
-                                    <div class="form-group">
-                                        <input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-sm" placeholder="Confirm Password" value="<%= typeof password_confirmation != 'undefined' ? password_confirmation : '' %>">
-                                    </div>
-                                    <span id="password_confirmation_id" class="input-error text-danger font-weight-bold"></span>
-                                </div>
-                            </div>
-                            
-                            <input type="submit" value="Register" class="btn btn-info btn-block">
-                            <span id="password_check" class="input-error text-danger font-weight-bold"></span>
-                        </form>
-                    </div>
-                </div>
+                        <div class="row">
+                           <div class="col-xs-6 col-sm-6 col-md-6">
+                              <div class="form-group">
+                                 <input type="password" name="password" id="password" class="form-control input-sm"
+                                    placeholder="Password"
+                                    value="<%= typeof password != 'undefined' ? password : '' %>">
+                              </div>
+                              <span id="password_id" class="input-error text-danger font-weight-bold"></span>
+                           </div>
+                           <div class="col-xs-6 col-sm-6 col-md-6">
+                              <div class="form-group">
+                                 <input type="password" name="password_confirmation" id="password_confirmation"
+                                    class="form-control input-sm" placeholder="Confirm Password"
+                                    value="<%= typeof password_confirmation != 'undefined' ? password_confirmation : '' %>">
+                              </div>
+                              <span id="password_confirmation_id"
+                                 class="input-error text-danger font-weight-bold"></span>
+                           </div>
+                        </div>
+
+                        <input type="submit" value="Register" class="btn btn-info btn-block">
+                        <span id="password_check" class="input-error text-danger font-weight-bold"></span>
+                     </form>
+                  </div>
+               </div>
             </div>
-        </div>
-    </div>
-</div>
+         </div>
+      </div>
+   </div>
 
-    <!-- <script type="text/javascript">
+   <!-- <script type="text/javascript">
         function validation(){
             var username = document.getElementById('username').value;
             var first_name = document.getElementById('first_name').value;
@@ -213,8 +234,9 @@ body, html {
         }
     </script> -->
 
-<script src="https://ajax.googleapis.com/ajax/libs/d3js/5.12.0/d3.min.js"></script>
-<script src="./js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.28.2/sweetalert2.all.min.js"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.12.0/d3.min.js"></script>
+   <script src="./js/bootstrap.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.28.2/sweetalert2.all.min.js"></script>
 </body>
+
 </html>
