--- a/app/views/dashboard.ejs
+++ b/app/views/dashboard.ejs
@@ -162,7 +162,7 @@ body, html {
             <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-2">
                 <li class="text-center" id="userIndicator">
                     <span class="glyphicon glyphicon-home"></span>
-                    <p>Logged in as <%= name %></p>
+                    <p>Logged in as <%= authData.user.username %></p>
                     <a href="/users/logout"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGOUT</button></a>
                 </li>
             </div>
